--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Cache Api",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Pablo Córdova Morales",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "1.18.2",
+    "dotenv": "4.0.0",
+    "express": "4.16.2",
+    "mongoose": "4.13.6"
+  }
 }
