--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "Pablo Córdova Morales",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.1",
     "body-parser": "1.18.2",
     "dotenv": "4.0.0",
     "express": "4.16.2",
-    "mongoose": "4.13.6"
+    "mongoose": "4.13.6",
+    "node-cache": "^4.1.1",
+    "randomstring": "^1.1.5"
   }
 }
